Add RTP path
